fix: resolve Vercel deployment schema error
- Remove unsupported 'nodeVersion' property from vercel.json
- Remove 'env' array from config (use Vercel dashboard instead)
- Add 'rewrites' rule for SPA routing (React Router deep links)
- Add .nvmrc file to specify Node.js version 20
- Add 'engines' field to package.json for version constraints

This fixes the deployment error: 'vercel.json schema validation failed:
should NOT have additional property nodeVersion'

Production deployment is now ready with zero breaking changes.

--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,10 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "nodeVersion": "20.x",
-  "env": [
+  "rewrites": [
     {
-      "key": "VITE_SUPABASE_URL",
-      "value": ""
-    },
-    {
-      "key": "VITE_SUPABASE_PUBLISHABLE_KEY",
-      "value": ""
-    },
-    {
-      "key": "VITE_SUPABASE_PROJECT_ID",
-      "value": ""
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
